# markdown-cli

./: .gitignore  Cargo.toml  README.md  bump-version.sh
.github/workflows/: release.yaml
src/core/: cli.rs  render.rs
